Fix long (German) FAQ texts are clipped by max-height

--- a/styles/faq-accordion.less
+++ b/styles/faq-accordion.less
@@ -2,7 +2,7 @@
   .accordion-content {
     // override display:none - backwards compatibility!
     display: block !important;
-    max-height: 20rem;
+    max-height: 30rem;
     transition: max-height .4s, padding .5s, color .25s, background-color .4s;
   }
 
